source/generated/org/alfresco/rest/antlr/WhereClauseParser.java
/*
 * #%L
 * Alfresco Remote API
 * %%
 * Copyright (C) 2005 - 2016 Alfresco Software Limited
 * %%
 * This file is part of the Alfresco software. 
 * If the software was purchased under a paid Alfresco license, the terms of 
 * the paid license agreement will prevail.  Otherwise, the software is 
 * provided under the following open source license terms:
 * 
 * Alfresco is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * Alfresco is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 * 
 * You should have received a copy of the GNU Lesser General Public License
 * along with Alfresco. If not, see <http://www.gnu.org/licenses/>.
 * #L%
 */
// $ANTLR 3.4 org/alfresco/rest/antlr/WhereClause.g 2013-05-24 09:01:14

package org.alfresco.rest.antlr;
import org.alfresco.rest.framework.resource.parameters.where.InvalidQueryException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class WhereClauseParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "BETWEEN", "COMMA", "EQUALS", "EXISTS", "GREATERTHAN", "GREATERTHANOREQUALS", "IDENTIFIER", "IDENTIFIERDIGIT", "IDENTIFIERLETTER", "IN", "LEFTPAREN", "LESSTHAN", "LESSTHANOREQUALS", "MATCHES", "NEGATION", "OR", "PROPERTYNAME", "PROPERTYVALUE", "RIGHTPAREN", "SINGLEQUOTE", "WS"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int BETWEEN=5;
    public static final int COMMA=6;
    public static final int EQUALS=7;
    public static final int EXISTS=8;
    public static final int GREATERTHAN=9;
    public static final int GREATERTHANOREQUALS=10;
    public static final int IDENTIFIER=11;
    public static final int IDENTIFIERDIGIT=12;
    public static final int IDENTIFIERLETTER=13;
    public static final int IN=14;
    public static final int LEFTPAREN=15;
    public static final int LESSTHAN=16;
    public static final int LESSTHANOREQUALS=17;
    public static final int MATCHES=18;
    public static final int NEGATION=19;
    public static final int OR=20;
    public static final int PROPERTYNAME=21;
    public static final int PROPERTYVALUE=22;
    public static final int RIGHTPAREN=23;
    public static final int SINGLEQUOTE=24;
    public static final int WS=25;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public WhereClauseParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public WhereClauseParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return WhereClauseParser.tokenNames; }
    public String getGrammarFileName() { return "org/alfresco/rest/antlr/WhereClause.g"; }


       
      // These methods are here to force the parser to error instead of suppressing problems.
    //	  @Override
    //	  public void reportError(RecognitionException e) {
    //      System.out.println("CUSTOM ERROR...\n" + e);
    //      throw new InvalidQueryException(e.getMessage());
    //	  }

        @Override
        protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException
        {
            throw new MismatchedTokenException(ttype, input);
        }
            
        @Override
        public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException
        {
            throw e;
        }
    //    
    //    @Override
    //    public String getErrorMessage(RecognitionException e, String[] tokenNames) 
    //    {
    //      System.out.println("THROW ME...\n" + e);
    //      throw new InvalidQueryException(e.getMessage());
    //    }
    // End of methods here to force the parser to error instead of supressing problems.


    public static class whereclause_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "whereclause"
    // org/alfresco/rest/antlr/WhereClause.g:125:1: whereclause : ( WS )? LEFTPAREN ! ( WS )? predicate RIGHTPAREN ! ( WS )? ;
    public final WhereClauseParser.whereclause_return whereclause() throws RecognitionException {
        WhereClauseParser.whereclause_return retval = new WhereClauseParser.whereclause_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token WS1=null;
        Token LEFTPAREN2=null;
        Token WS3=null;
        Token RIGHTPAREN5=null;
        Token WS6=null;
        WhereClauseParser.predicate_return predicate4 =null;


        Object WS1_tree=null;
        Object LEFTPAREN2_tree=null;
        Object WS3_tree=null;
        Object RIGHTPAREN5_tree=null;
        Object WS6_tree=null;

        try {
            // org/alfresco/rest/antlr/WhereClause.g:125:13: ( ( WS )? LEFTPAREN ! ( WS )? predicate RIGHTPAREN ! ( WS )? )
            // org/alfresco/rest/antlr/WhereClause.g:125:15: ( WS )? LEFTPAREN ! ( WS )? predicate RIGHTPAREN ! ( WS )?
            {
            root_0 = (Object)adaptor.nil();


            // org/alfresco/rest/antlr/WhereClause.g:125:15: ( WS )?
            int alt1=2;
            switch ( input.LA(1) ) {
                case WS:
                    {
                    alt1=1;
                    }
                    break;
            }

            switch (alt1) {
                case 1 :
                    // org/alfresco/rest/antlr/WhereClause.g:125:15: WS
                    {
                    WS1=(Token)match(input,WS,FOLLOW_WS_in_whereclause750); 
                    WS1_tree = 
                    (Object)adaptor.create(WS1)
                    ;
                    adaptor.addChild(root_0, WS1_tree);


                    }
                    break;

            }


            LEFTPAREN2=(Token)match(input,LEFTPAREN,FOLLOW_LEFTPAREN_in_whereclause753); 

            // org/alfresco/rest/antlr/WhereClause.g:125:30: ( WS )?
            int alt2=2;
            switch ( input.LA(1) ) {
                case WS:
                    {
                    alt2=1;
                    }
                    break;
            }

            switch (alt2) {
                case 1 :
                    // org/alfresco/rest/antlr/WhereClause.g:125:30: WS
                    {
                    WS3=(Token)match(input,WS,FOLLOW_WS_in_whereclause756); 
                    WS3_tree = 
                    (Object)adaptor.create(WS3)
                    ;
                    adaptor.addChild(root_0, WS3_tree);


                    }
                    break;

            }


            pushFollow(FOLLOW_predicate_in_whereclause759);
            predicate4=predicate();

            state._fsp--;

            adaptor.addChild(root_0, predicate4.getTree());

            RIGHTPAREN5=(Token)match(input,RIGHTPAREN,FOLLOW_RIGHTPAREN_in_whereclause761); 

            // org/alfresco/rest/antlr/WhereClause.g:125:56: ( WS )?
            int alt3=2;
            switch ( input.LA(1) ) {
                case WS:
                    {
                    alt3=1;
                    }
                    break;
            }

            switch (alt3) {
                case 1 :
                    // org/alfresco/rest/antlr/WhereClause.g:125:56: WS
                    {
                    WS6=(Token)match(input,WS,FOLLOW_WS_in_whereclause764); 
                    WS6_tree = 
                    (Object)adaptor.create(WS6)
                    ;
                    adaptor.addChild(root_0, WS6_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch(RecognitionException e)
        {
           throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "whereclause"


    public static class predicate_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "predicate"
    // org/alfresco/rest/antlr/WhereClause.g:126:1: predicate : ( simplepredicate | simplepredicate ( AND simplepredicate )+ -> ^( AND ( simplepredicate )+ ) | simplepredicate ( OR simplepredicate )+ -> ^( OR ( simplepredicate )+ ) );
    public final WhereClauseParser.predicate_return predicate() throws RecognitionException {
        WhereClauseParser.predicate_return retval = new WhereClauseParser.predicate_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token AND9=null;
        Token OR12=null;
        WhereClauseParser.simplepredicate_return simplepredicate7 =null;

        WhereClauseParser.simplepredicate_return simplepredicate8 =null;

        WhereClauseParser.simplepredicate_return simplepredicate10 =null;

        WhereClauseParser.simplepredicate_return simplepredicate11 =null;

        WhereClauseParser.simplepredicate_return simplepredicate13 =null;


        Object AND9_tree=null;
        Object OR12_tree=null;
        RewriteRuleTokenStream stream_AND=new RewriteRuleTokenStream(adaptor,"token AND");
        RewriteRuleTokenStream stream_OR=new RewriteRuleTokenStream(adaptor,"token OR");
        RewriteRuleSubtreeStream stream_simplepredicate=new RewriteRuleSubtreeStream(adaptor,"rule simplepredicate");
        try {
            // org/alfresco/rest/antlr/WhereClause.g:126:11: ( simplepredicate | simplepredicate ( AND simplepredicate )+ -> ^( AND ( simplepredicate )+ ) | simplepredicate ( OR simplepredicate )+ -> ^( OR ( simplepredicate )+ ) )
            int alt6=3;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // org/alfresco/rest/antlr/WhereClause.g:126:13: simplepredicate
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_simplepredicate_in_predicate772);
                    simplepredicate7=simplepredicate();

                    state._fsp--;

                    adaptor.addChild(root_0, simplepredicate7.getTree());

                    }
                    break;
                case 2 :
                    // org/alfresco/rest/antlr/WhereClause.g:127:13: simplepredicate ( AND simplepredicate )+
                    {
                    pushFollow(FOLLOW_simplepredicate_in_predicate786);
                    simplepredicate8=simplepredicate();

                    state._fsp--;

                    stream_simplepredicate.add(simplepredicate8.getTree());

                    // org/alfresco/rest/antlr/WhereClause.g:127:29: ( AND simplepredicate )+
                    int cnt4=0;
                    loop4:
                    do {
                        int alt4=2;
                        switch ( input.LA(1) ) {
                        case AND:
                            {
                            alt4=1;
                            }
                            break;

                        }

                        switch (alt4) {
                    	case 1 :
                    	    // org/alfresco/rest/antlr/WhereClause.g:127:30: AND simplepredicate
                    	    {
                    	    AND9=(Token)match(input,AND,FOLLOW_AND_in_predicate789);  
                    	    stream_AND.add(AND9);


                    	    pushFollow(FOLLOW_simplepredicate_in_predicate791);
                    	    simplepredicate10=simplepredicate();

                    	    state._fsp--;

                    	    stream_simplepredicate.add(simplepredicate10.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt4 >= 1 ) break loop4;
                                EarlyExitException eee =
                                    new EarlyExitException(4, input);
                                throw eee;
                        }
                        cnt4++;
                    } while (true);


                    // AST REWRITE
                    // elements: simplepredicate, AND
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 127:52: -> ^( AND ( simplepredicate )+ )
                    {
                        // org/alfresco/rest/antlr/WhereClause.g:127:55: ^( AND ( simplepredicate )+ )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_AND.nextNode()
                        , root_1);

                        if ( !(stream_simplepredicate.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_simplepredicate.hasNext() ) {
                            adaptor.addChild(root_1, stream_simplepredicate.nextTree());

                        }
                        stream_simplepredicate.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 3 :
                    // org/alfresco/rest/antlr/WhereClause.g:128:13: simplepredicate ( OR simplepredicate )+
                    {
                    pushFollow(FOLLOW_simplepredicate_in_predicate816);
                    simplepredicate11=simplepredicate();

                    state._fsp--;

                    stream_simplepredicate.add(simplepredicate11.getTree());

                    // org/alfresco/rest/antlr/WhereClause.g:128:29: ( OR simplepredicate )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        switch ( input.LA(1) ) {
                        case OR:
                            {
                            alt5=1;
                            }
                            break;

                        }

                        switch (alt5) {
                    	case 1 :
                    	    // org/alfresco/rest/antlr/WhereClause.g:128:30: OR simplepredicate
                    	    {
                    	    OR12=(Token)match(input,OR,FOLLOW_OR_in_predicate819);  
                    	    stream_OR.add(OR12);


                    	    pushFollow(FOLLOW_simplepredicate_in_predicate821);
                    	    simplepredicate13=simplepredicate();

                    	    state._fsp--;

                    	    stream_simplepredicate.add(simplepredicate13.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);


                    // AST REWRITE
                    // elements: OR, simplepredicate
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 128:51: -> ^( OR ( simplepredicate )+ )
                    {
                        // org/alfresco/rest/antlr/WhereClause.g:128:54: ^( OR ( simplepredicate )+ )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_OR.nextNode()
                        , root_1);

                        if ( !(stream_simplepredicate.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_simplepredicate.hasNext() ) {
                            adaptor.addChild(root_1, stream_simplepredicate.nextTree());

                        }
                        stream_simplepredicate.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch(RecognitionException e)
        {
           throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "predicate"


    public static class simplepredicate_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "simplepredicate"
    // org/alfresco/rest/antlr/WhereClause.g:129:1: simplepredicate : ( allowedpredicates -> allowedpredicates | NEGATION allowedpredicates -> ^( NEGATION allowedpredicates ) );
    public final WhereClauseParser.simplepredicate_return simplepredicate() throws RecognitionException {
        WhereClauseParser.simplepredicate_return retval = new WhereClauseParser.simplepredicate_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NEGATION15=null;
        WhereClauseParser.allowedpredicates_return allowedpredicates14 =null;

        WhereClauseParser.allowedpredicates_return allowedpredicates16 =null;


        Object NEGATION15_tree=null;
        RewriteRuleTokenStream stream_NEGATION=new RewriteRuleTokenStream(adaptor,"token NEGATION");
        RewriteRuleSubtreeStream stream_allowedpredicates=new RewriteRuleSubtreeStream(adaptor,"rule allowedpredicates");
        try {
            // org/alfresco/rest/antlr/WhereClause.g:129:17: ( allowedpredicates -> allowedpredicates | NEGATION allowedpredicates -> ^( NEGATION allowedpredicates ) )
            int alt7=2;
            switch ( input.LA(1) ) {
            case EXISTS:
            case PROPERTYNAME:
                {
                alt7=1;
                }
                break;
            case NEGATION:
                {
                alt7=2;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }

            switch (alt7) {
                case 1 :
                    // org/alfresco/rest/antlr/WhereClause.g:129:19: allowedpredicates
                    {
                    pushFollow(FOLLOW_allowedpredicates_in_simplepredicate839);
                    allowedpredicates14=allowedpredicates();

                    state._fsp--;

                    stream_allowedpredicates.add(allowedpredicates14.getTree());

                    // AST REWRITE
                    // elements: allowedpredicates
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 129:37: -> allowedpredicates
                    {
                        adaptor.addChild(root_0, stream_allowedpredicates.nextTree());

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // org/alfresco/rest/antlr/WhereClause.g:130:19: NEGATION allowedpredicates
                    {
                    NEGATION15=(Token)match(input,NEGATION,FOLLOW_NEGATION_in_simplepredicate863);  
                    stream_NEGATION.add(NEGATION15);


                    pushFollow(FOLLOW_allowedpredicates_in_simplepredicate865);
                    allowedpredicates16=allowedpredicates();

                    state._fsp--;

                    stream_allowedpredicates.add(allowedpredicates16.getTree());

                    // AST REWRITE
                    // elements: NEGATION, allowedpredicates
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 130:46: -> ^( NEGATION allowedpredicates )
                    {
                        // org/alfresco/rest/antlr/WhereClause.g:130:49: ^( NEGATION allowedpredicates )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_NEGATION.nextNode()
                        , root_1);

                        adaptor.addChild(root_1, stream_allowedpredicates.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch(RecognitionException e)
        {
           throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "simplepredicate"


    public static class allowedpredicates_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "allowedpredicates"
    // org/alfresco/rest/antlr/WhereClause.g:131:1: allowedpredicates : ( comparisonpredicate | existspredicate | betweenpredicate | inpredicate | matchespredicate );
    public final WhereClauseParser.allowedpredicates_return allowedpredicates() throws RecognitionException {
        WhereClauseParser.allowedpredicates_return retval = new WhereClauseParser.allowedpredicates_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        WhereClauseParser.comparisonpredicate_return comparisonpredicate17 =null;

        WhereClauseParser.existspredicate_return existspredicate18 =null;

        WhereClauseParser.betweenpredicate_return betweenpredicate19 =null;

        WhereClauseParser.inpredicate_return inpredicate20 =null;

        WhereClauseParser.matchespredicate_return matchespredicate21 =null;



        try {
            // org/alfresco/rest/antlr/WhereClause.g:131:19: ( comparisonpredicate | existspredicate | betweenpredicate | inpredicate | matchespredicate )
            int alt8=5;
            switch ( input.LA(1) ) {
            case PROPERTYNAME:
                {
                switch ( input.LA(2) ) {
                case BETWEEN:
                    {
                    alt8=3;
                    }
                    break;
                case IN:
                    {
                    alt8=4;
                    }
                    break;
                case MATCHES:
                    {
                    alt8=5;
                    }
                    break;
                case EQUALS:
                case GREATERTHAN:
                case GREATERTHANOREQUALS:
                case LESSTHAN:
                case LESSTHANOREQUALS:
                    {
                    alt8=1;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 1, input);

                    throw nvae;

                }

                }
                break;
            case EXISTS:
                {
                alt8=2;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }

            switch (alt8) {
                case 1 :
                    // org/alfresco/rest/antlr/WhereClause.g:131:21: comparisonpredicate
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_comparisonpredicate_in_allowedpredicates880);
                    comparisonpredicate17=comparisonpredicate();

                    state._fsp--;

                    adaptor.addChild(root_0, comparisonpredicate17.getTree());

                    }
                    break;
                case 2 :
                    // org/alfresco/rest/antlr/WhereClause.g:131:43: existspredicate
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_existspredicate_in_allowedpredicates884);
                    existspredicate18=existspredicate();

                    state._fsp--;

                    adaptor.addChild(root_0, existspredicate18.getTree());

                    }
                    break;
                case 3 :
                    // org/alfresco/rest/antlr/WhereClause.g:131:61: betweenpredicate
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_betweenpredicate_in_allowedpredicates888);
                    betweenpredicate19=betweenpredicate();

                    state._fsp--;

                    adaptor.addChild(root_0, betweenpredicate19.getTree());

                    }
                    break;
                case 4 :
                    // org/alfresco/rest/antlr/WhereClause.g:131:80: inpredicate
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_inpredicate_in_allowedpredicates892);
                    inpredicate20=inpredicate();

                    state._fsp--;

                    adaptor.addChild(root_0, inpredicate20.getTree());

                    }
                    break;
                case 5 :
                    // org/alfresco/rest/antlr/WhereClause.g:131:94: matchespredicate
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_matchespredicate_in_allowedpredicates896);
                    matchespredicate21=matchespredicate();

                    state._fsp--;

                    adaptor.addChild(root_0, matchespredicate21.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch(RecognitionException e)
        {
           throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "allowedpredicates"


    public static class comparisonpredicate_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "comparisonpredicate"
    // org/alfresco/rest/antlr/WhereClause.g:132:1: comparisonpredicate : PROPERTYNAME comparisonoperator value -> ^( comparisonoperator PROPERTYNAME value ) ;
    public final WhereClauseParser.comparisonpredicate_return comparisonpredicate() throws RecognitionException {
        WhereClauseParser.comparisonpredicate_return retval = new WhereClauseParser.comparisonpredicate_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PROPERTYNAME22=null;
        WhereClauseParser.comparisonoperator_return comparisonoperator23 =null;

        WhereClauseParser.value_return value24 =null;

